[package]
name = "circos-rs"
version = "0.1.0"
edition = "2024"
description = "Circos - circular data visualization, ported from Perl to Rust"
license = "MIT"
repository = "https://github.com/henriksson-lab/circos-rs"
keywords = ["circos", "genomics", "visualization", "bioinformatics", "svg"]
categories = ["science", "visualization", "command-line-utilities"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
fontdue = "0.9"
rayon = "1"
regex = "1"
resvg = "0.44"
tiny-skia = "0.11"
usvg = "0.44"

[[bin]]
name = "circos-rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3"
